--- a/index.css
+++ b/index.css
@@ -6,43 +6,47 @@ body{
     width: auto;
 }
 
+.container{
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+    height: 100vh;
+}
+
 .header{
-    width: auto;
+    width: 100%;
     height: 30px;
     background-color: rgb(198, 198, 198);
+    position: fixed;
 }
 
-.left-content{
-    width: 25%;
-    height: 760px;
-    background-color: coral;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+.left-content, .right-content{
+ flex: 0 0 auto;
+ width: 250px;
+ background-color: tomato;
+ color: white;
+ padding: 20px;
 }
 
-.name{
-    width: 100%;
-    height: 8%;
-    background-color: yellow;
+.right-content{
+    width: 400px;
+    overflow: auto;
 }
 
-.menu{
-    width: 100%;
-    height: 56%;
-    background-color: yellowgreen;
-    display: flex;
-    flex-direction: column;
-}
-
-.menu-button{
-    width: 100%;
+.main-content{
     flex: 1;
+    overflow: auto;
+    background-color: black;
 }
 
-.more{
-    width: 100%;
-    height: 8%;
-    background-color: violet;
-    margin-top: auto;
+.scroller{
+    padding: 10px;
 }
+
+.right-content-scroller{
+    padding: 10px;
+}
+
+
+
+
