--- a/index.css
+++ b/index.css
@@ -2,6 +2,15 @@ body{
     margin: 0;
 }
 
+::-webkit-scrollbar {
+    width: 0;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+
 #main-body{
     width: auto;
 }
@@ -15,22 +24,56 @@ body{
 
 .header{
     width: 100%;
-    height: 30px;
+    height: 40px;
     background-color: rgb(198, 198, 198);
     position: fixed;
+    z-index: 1;
+}
+
+.header h4{
+    font-size: 15px;
+    color: rgb(0, 0, 0);
+    margin-top: 10px;
+    margin-left: 20px;
 }
 
 .left-content, .right-content{
+ margin-top: 40px;
  flex: 0 0 auto;
- width: 250px;
+ width: 17%;
  background-color: tomato;
  color: white;
- padding: 20px;
+ padding: 10px;
+ display: flex;
+ flex-direction: column;
 }
 
-.right-content{
-    width: 400px;
-    overflow: auto;
+.name{
+    width: 80%;
+    height: 10vh;
+    background-color: yellow;
+    text-align: center;
+}
+
+.menu{
+    width: 80%;
+    height: 90vh;
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    flex-direction: column;
+}
+
+.menu-button{
+    width: 80%;
+    height: 6vh;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    border: 0;
+    cursor: pointer;
+}
+
+#more{
+    margin-top: auto;
 }
 
 .main-content{
@@ -43,9 +86,45 @@ body{
     padding: 10px;
 }
 
+.right-content{
+    width: 30%;
+    overflow: auto;
+}
+
 .right-content-scroller{
     padding: 10px;
+    display: flex;
+    flex-direction: column;
 }
+
+.account{
+    width: 100%;
+    height: 8vh;
+    background-color: steelblue;
+}
+
+.suggested{
+    width: 100%;
+    height: 3vh;
+    background-color: beige;
+    margin-top: 15px;
+}
+
+.chat{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+}
+
+.chatbox{
+    width: 100%;
+    height: 7vh;
+    background-color: turquoise;
+    margin-top: 10px;
+}
+
+
 
 
 
