--- a/index.css
+++ b/index.css
@@ -10,7 +10,6 @@ body{
     background: transparent;
 }
 
-
 #main-body{
     width: auto;
 }
@@ -96,7 +95,6 @@ body{
 }
 
 .story{
-    /* margin-top: 10px; */
     flex: 0 0 auto;
     width: 12vh;
     height: 12vh;
@@ -132,9 +130,223 @@ body{
 
 .postbox{
     width: 70%;
-    height: 65vh;
-    background-color: steelblue;
-    margin-top: 10px;
+    height: 77vh;
+    background-color: rgb(255, 255, 255);
+    margin-top: 1px;
+    display: flex;
+    flex-direction: column;
+    border-top: 0.2px solid grey;
+    border-bottom: 0.2 solid grey;
+}
+
+.topbar{
+    width: auto;
+    height: 6vh;
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    padding:1%;
+}
+
+.topbar-round{
+    width: 5vh;
+    height: 5vh;
+    background-color: yellowgreen;
+    border-radius: 50%;
+    border: 3px solid orange;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.topbar-round-img{
+    max-width: 100%;
+    height: 5vh;
+    object-fit: cover;
+}
+
+.topbar-name{
+    width: 25%;
+    height: 6vh;
+    background-color: rgb(0, 0, 0);
+    margin-left: 5px;
+    color: white;
+}
+
+.topbar-name h5{
+    font-size: 15px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top: 11%;
+}
+
+.topbar-time{
+    width: 10%;
+    height: 6vh;
+    background-color: rgb(0, 0, 0);
+    color: white;
+}
+
+.topbar-time h5{
+    font-size: 15px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top: 28%;
+}
+
+.topbar-button{
+    width: 10%;
+    min-height: 6vh;
+    background-color: rgba(0, 0, 0, 0);
+    margin-left: auto;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+}
+
+.topbar-button button{
+    background-color: rgba(0, 0, 0, 0);
+    color: white;
+    border: 0;
+    cursor: pointer;
+}
+
+.media{
+    width: 100%;
+    height: 50vh;
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.media-content{
+    max-width: 100%;
+    height: 50vh;
+    object-fit: cover;
+}
+
+.postbox-btn{
+    width: 100%;
+    height: 4vh;
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    flex-direction: column;
+}
+
+.top-btns{
+    width: auto;
+    height: 4vh;
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    padding: 3px;
+    color: white;
+    margin-top: 2px;
+}
+
+.top-btns i{
+    font-size: 21px;
+}
+
+.btn-set-one{
+    display: flex;
+    width: 20%;
+    justify-content: space-between;
+}
+
+.btn-set-two{
+    margin-left:auto
+}
+
+.postbox-text{
+    height: 17vh;
+    width: 100%;
+    background-color: yellowgreen;
+    display: flex;
+    flex-direction: column;
+    color: white;
+}
+
+.like{
+    width: auto;
+    height: 2vh;
+    background-color: rgb(0, 0, 0);
+}
+
+.caption{
+    width: auto;
+    height: 4vh;
+    background-color: rgb(0, 0, 0);
+    
+}
+
+.str-btn{
+    width: auto;
+    height: 3vh;
+    background-color: rgb(0, 0, 0);
+}
+
+.View-comment{
+    width: auto;
+    height: 4vh;
+    background-color: rgb(0, 0, 0);
+}
+
+.Add-comment{
+    width: auto;
+    height: 4vh;
+    background-color: rgb(0, 0, 0);
+}
+
+.like p, .caption p, .str-btn button, .View-comment p, .Add-comment p{
+    margin-top: 0px;
+}
+
+.like p{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.caption p{
+    font-size: 12px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.caption span{
+    font-size: 14px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.str-btn button{
+    height: 2vh;
+    border: 0;
+    background-color: rgba(240, 248, 255, 0);
+    font-size: 12px;
+    color: silver;
+}
+
+.View-comment button{
+    height: 3vh;
+    border: 0;
+    background-color: rgba(240, 248, 255, 0);
+    font-size: 14px;
+    color: silver;
+}
+
+.Add-comment{
+    display: flex;
+}
+
+.Add-comment button{
+    height: 3vh;
+    border: 0;
+    background-color: rgba(0, 0, 0, 0);
+    font-size: 14px;
+    color: silver;
+}
+
+.emoji{
+    margin-left: auto;
 }
 
 .right-content{
