--- a/index.css
+++ b/index.css
@@ -92,6 +92,7 @@ body{
     background-color: rgb(0, 0, 0);
     color: white;
     display: flex;
+    margin-left: 10px;
 }
 
 .story{
@@ -99,11 +100,11 @@ body{
     width: 12vh;
     height: 12vh;
     background-color: rgb(7, 7, 7);
-    margin-left: 5px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-left: -10px;
 }
 
 .round{
@@ -111,15 +112,28 @@ body{
     height: 8vh;
     border-radius: 20vh;
     background-color: saddlebrown;
-    border: 2px solid tomato;
+    border: 3px solid tomato;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.story-round-img{
+    border-radius: 30%;
+    width: 8vh;
+    height: 8vh;
+    object-fit: cover;
 }
 
 .sname{
     width: 11vh;
-    background-color: springgreen;
+    background-color: rgb(0, 0, 0);
     font-size: 10px;
     text-align: center;
     margin-top: 5px;
+    font-size: 12px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
 .post{
