--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+
 body{
     margin: 0;
 }
@@ -40,7 +41,7 @@ body{
  margin-top: 40px;
  flex: 0 0 auto;
  width: 17%;
- background-color: tomato;
+ background-color: rgb(0, 0, 0);
  color: white;
  padding: 10px;
  display: flex;
@@ -49,9 +50,10 @@ body{
 
 .name{
     width: 80%;
-    height: 10vh;
-    background-color: yellow;
-    text-align: center;
+    background-color: rgb(0, 0, 0);
+    text-align: left;
+    font-size: 30px;
+    margin-top: 0;
 }
 
 .menu{
@@ -60,6 +62,7 @@ body{
     background-color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
+    font-size: 16px;
 }
 
 .menu-button{
@@ -69,6 +72,12 @@ body{
     color: rgb(255, 255, 255);
     border: 0;
     cursor: pointer;
+    text-align: left;
+    margin-left: 5px
+}
+
+.menu-button i{
+    font-size: 18px;
 }
 
 #more{
