--- a/index.css
+++ b/index.css
@@ -35,6 +35,7 @@ body{
     color: rgb(0, 0, 0);
     margin-top: 10px;
     margin-left: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .left-content, .right-content{
@@ -46,6 +47,14 @@ body{
  padding: 10px;
  display: flex;
  flex-direction: column;
+}
+
+.left-content{
+    border-right: .01px solid rgb(37, 37, 37);
+}
+
+.right-content{
+    border-left: .01px solid rgb(37, 37, 37);
 }
 
 .name{
@@ -62,7 +71,6 @@ body{
     background-color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
-    font-size: 16px;
 }
 
 .menu-button{
@@ -73,7 +81,8 @@ body{
     border: 0;
     cursor: pointer;
     text-align: left;
-    margin-left: 5px
+    margin-left: 20px;
+    font-size: 15px;
 }
 
 .menu-button i{
@@ -386,29 +395,126 @@ body{
 .account{
     width: 100%;
     height: 8vh;
-    background-color: steelblue;
+}
+
+.account-btn{
+    width: 100%;
+    height: 8vh;
+    display: flex;
+    align-items: center;
+    background-color: rgba(240, 248, 255, 0);
+    border: 0;
+}
+
+.account-btn-round{
+    width: 5vh;
+    height: 5vh;
+    border-radius: 50%;
+    border: 3px solid orange;
+    overflow: hidden;
+}
+
+.account-btn-round-img{
+    width: 5vh;
+    height: 5vh;
+}
+
+.account-btn-name{
+    margin-left:3px;
+    width: 30vh;
+    height: 6vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.account-btn-name .name1{
+    width: 100%;
+    height: 3vh;
+    display: flex;
+}
+
+.name1 h5{
+    margin-top: 10px;
+    margin-left: 2vh;
+    font-size: 13px;
+    color: white;
+}
+
+.account-btn-name .name2{
+    width: 100%;
+    height: 3vh;
+    display: flex;
+}
+
+.name2 h5{
+    margin-top: 5px;
+    margin-left: 2vh;
+    font-size: 13px;
+    color: rgb(126, 127, 128);
+}
+
+.account-btn-button{
+    width: 10vh;
+    height: 3vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+}
+.switch{
+    font-weight: 600;
+    text-decoration: none;
+    color: rgb(38, 136, 255);
 }
 
 .suggested{
     width: 100%;
     height: 3vh;
-    background-color: beige;
-    margin-top: 15px;
+    margin-top: 5px;
+    display: flex;
+}
+
+.suggested-name1{
+    width: 35vh;
+    height: 3vh;
+    display: flex;
+    justify-content: center;
+}
+
+.suggested-name1 h5{
+   margin-top: 1px;
+   margin-right: auto;
+   font-size: 15px;
+   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+   color: rgb(159, 159, 159);
+}
+
+.suggested-name2{
+    width: 17vh;
+    height: 3vh;
+    display: flex;
+    justify-content: center;
+}
+
+.suggested-name2 a{
+    margin-top: 1px;
+    font-size: 14px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: rgb(242, 242, 242);
+    font-weight: 600;
+}
+
+.suggested-name2 a{
+    margin-left: auto;
+    text-decoration: none;;
 }
 
 .chat{
     width: 100%;
     display: flex;
     flex-direction: column;
-    margin-top: 10px;
 }
 
-.chatbox{
-    width: 100%;
-    height: 7vh;
-    background-color: turquoise;
-    margin-top: 10px;
-}
 
 
 
